--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
 
         <div class="rightNav">
             <ul>
-                <a href="./indexAbout.html">
+                <a href="about/index.html.html">
                 <li>About</li>
                 </a>
                 <a href="./indexContact.html">
