--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
 <div class="images">
     <div class="topImages">
-        <img class="orangeCupCake" src="./orangeCupcake.jpg" alt="Fall Cupcakes">
-        <img class="seededBread" src="./bread-5470532_1280.jpg" alt="Seeded Bread">
+        <img class="orangeCupCake" src="images/orangeCupcake.jpg" alt="Fall Cupcakes">
+        <img class="seededBread" src="images/bread-5470532_1280.jpg" alt="Seeded Bread">
     </div>
 
     <div class="bottomImages">
-        <img class="bakery" src="./bakery-1868925_1280.jpg">
+        <img class="bakery" src="images/bakery-1868925_1280.jpg">
     </div>
 </div>
 
