--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
     <div class="center">
 
     <div class="leftCenter">
-    <img id="croppedCafe" src="./croppedCafe.png" alt="Forefront of Bakery">
+    <img id="croppedCafe" src="images/croppedCafe.png" alt="Forefront of Bakery">
     </div>
 
     <div class="rightCenter">
