--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="about/index.html">
                 <li>About</li>
                 </a>
-                <a href="./indexContact.html">
+                <a href="contact/index.html">
                 <li>Contact</li>
                 </a>
                 <li>Recipes</li>
@@ -33,7 +33,7 @@
     <p>a family-owned bakery specializing in <i>organic</i>, <i>gluten-free</i>, 
         and <i>vegan</i> baked goods
     </p>
-    <a href="./indexMenu.html">
+    <a href="menu/index.html">
     <button>
         Menu
     </button>
