--- a/menu/indexMenu.html
+++ b/menu/indexMenu.html
@@ -11,17 +11,17 @@
 <div class="navBar">
 
         <div class="leftNav">
-            <a href="./index.html">
+            <a href="index.html">
             <h2>Wholesome Bites Bakery</h2>
             </a>
         </div>
 
 
         <div class="rightNav">
-            <a href="./indexAbout.html">
+            <a href="about/index.html">
         <h2>About</h2>
         </a>
-        <a href="./indexContact.html">
+        <a href="contact/index.html">
         <h2>Contact</h2>
         </a>
         <h2>Recipes</h2>
@@ -40,7 +40,7 @@
     <div class="left">
 
         <div class="aMenuItem">
-            <img src="./cookies-8668140_1280.jpg">
+            <img src="images/cookies-8668140_1280.jpg">
             <div class="itemDescription">
             <div class="itemTitle">
             <h2>Vegan Chocolate Chip Cookies</h2>
@@ -56,7 +56,7 @@
 
 
         <div class="aMenuItem">
-            <img src="./cake.jpg">
+            <img src="images/cake.jpg">
             <div class="itemDescription">
             <div class="itemTitle">
             <h2>Vegan Lemon Blueberry Cake Slice</h2>
@@ -71,7 +71,7 @@
 
 
         <div class="aMenuItem">
-            <img src="./sourdough.jpg">
+            <img src="images/sourdough.jpg">
             <div class="itemDescription">
             <div class="itemTitle">
             <h2>Organic Sourdough Loaf</h2>
