--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
     <div class="center">
 
     <div class="leftCenter">
-    <img id="croppedCafe" src="https://github.com/rachelmorgan22/wholesome-bites-bakery/blob/main/images/croppedCafe.jpg?raw=true" alt="Forefront of Bakery">
+    <img id="croppedCafe" src="../images/croppedCafe.jpg" alt="Forefront of Bakery">
     </div>
 
     <div class="rightCenter">
