--- a/menu/index.html
+++ b/menu/index.html
@@ -40,7 +40,7 @@
     <div class="left">
 
         <div class="aMenuItem">
-            <img src="images/cookies-8668140_1280.jpg">
+            <img src="../images/cookies-8668140_1280.jpg">
             <div class="itemDescription">
             <div class="itemTitle">
             <h2>Vegan Chocolate Chip Cookies</h2>
@@ -56,7 +56,7 @@
 
 
         <div class="aMenuItem">
-            <img src="images/cake.jpg">
+            <img src="../images/cake.jpg">
             <div class="itemDescription">
             <div class="itemTitle">
             <h2>Vegan Lemon Blueberry Cake Slice</h2>
@@ -71,7 +71,7 @@
 
 
         <div class="aMenuItem">
-            <img src="images/sourdough.jpg">
+            <img src="../images/sourdough.jpg">
             <div class="itemDescription">
             <div class="itemTitle">
             <h2>Organic Sourdough Loaf</h2>
