--- a/about/index.html
+++ b/about/index.html
@@ -18,10 +18,10 @@
 
 
         <div class="rightNav">
-            <a href="../menu/index.html">
+            <a href="menu/index.html">
         <h2>Menu</h2>
             </a>
-            <a href="../contact/index.html">
+            <a href="./contact/index.html">
         <h2>Contact</h2>
         </a>
         <h2>Recipes</h2>
