--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 <div class="navBar">
 
         <div class="leftNav">
-            <a href="./index.html">
+            <a href="./">
             <h2>Wholesome Bites Bakery</h2>
             </a>
         </div>
@@ -21,7 +21,7 @@
             <a href="menu/index.html">
         <h2>Menu</h2>
             </a>
-            <a href="./contact/index.html">
+            <a href="contact/index.html">
         <h2>Contact</h2>
         </a>
         <h2>Recipes</h2>
