--- a/menu/index.html
+++ b/menu/index.html
@@ -18,10 +18,10 @@
 
 
         <div class="rightNav">
-            <a href="about/index.html">
+            <a href="./about/index.html">
         <h2>About</h2>
         </a>
-        <a href="contact/index.html">
+        <a href="./contact/index.html">
         <h2>Contact</h2>
         </a>
         <h2>Recipes</h2>
