--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 <div class="navBar">
 
         <div class="leftNav">
-            <a href="./">
+            <a href="./index.html">
             <h2>Wholesome Bites Bakery</h2>
             </a>
         </div>
