--- a/menu/index.html
+++ b/menu/index.html
@@ -18,7 +18,7 @@
 
 
         <div class="rightNav">
-            <a href=".../about/index.html">
+            <a href="../about/index.html">
         <h2>About</h2>
         </a>
         <a href="../contact/index.html">
