--- a/contact/index.html
+++ b/contact/index.html
@@ -17,10 +17,10 @@
     </div>
 
     <div class="rightNav">
-        <a href="./about/index.html">
+        <a href="../about/index.html">
     <h2>About</h2>
     </a>
-    <a href="./contact/index.html">
+    <a href="../contact/index.html">
     <h2>Contact</h2>
     </a>
     <a><h2>Recipes</h2></a>
