--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
 <div class="navBar">
 
     <div class="leftNav">
-    <a href="./index.html">
+    <a href="../index.html">
     <h1 class="title">Wholesome Bites Bakery</h1>
     </a>
     </div>
