--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
             <a href="../contact/index.html">
         <h2>Contact</h2>
         </a>
-        <h2>recipes</h2>
+        <h2>reci</h2>
         </div>
 
 </div>
